--- a/app/review_submitted_piece/style.styl
+++ b/app/review_submitted_piece/style.styl
@@ -8,7 +8,7 @@
     margin-right 15px
 
   .video-preview
-    width 550px
+    width 100%
 
   .link-btn
     padding-top 9px
@@ -42,4 +42,18 @@
     margin-bottom 10px
   .comment
     margin-bottom 10px
+
+  .grade
+    margin-right 5px
+    margin-bottom 5px
+    width 60px
+
+  .submit-grade-btn
+    margin-top 10px
+    margin-top 10px
+    width 250px
+    display inline-block
+
+  .percent
+    margin-top 10px
 
