--- a/app/piece/style.styl
+++ b/app/piece/style.styl
@@ -51,16 +51,15 @@
   .video-panel-body
     height 400px
 
-  // .status
-  //   position absolute
-  //   top 0px
-  //   right 0px
-  //   width 100px
-  //   height 30px
-
   .submission-status
     margin-right 10px
 
-  .video-submission-heading
-    padding-top 5px
-    padding-bottom 5px
+  .video-submission-panel
+    position relative
+
+    .video-submission-overlay
+      position absolute
+      top 0px
+      width 100%
+      background-color rgba(255, 255, 255, 0.7)
+      padding 5px 15px
