--- a/app/piece/template.jade
+++ b/app/piece/template.jade
@@ -4,22 +4,20 @@
     .col-md-12
       .clearfix
         h5.pull-left {{ctrl.piece.name}} - {{ctrl.piece.composer}} ({{ctrl.piece.era}})
-        .points-to-next-level.pull-right <strong>30 / 100</strong> points
+        .points-to-next-level.pull-right <strong>{{ctrl.level.displayPiecePoints(ctrl.userPiece.grade, ctrl.piece.level)}}</strong> points
       .row
         .col-xs-12
           progressbar(
             animate="false"
-            value="30"
+            value="ctrl.userPiece.grade * 100"
           )
     .col-md-8
-      .panel.panel-default.piece-panel(ng-class='{"panel-warning": ctrl.userPiece.waitingToBeGraded, "panel-success": ctrl.userPiece.grade && !ctrl.userPiece.waitingToBeGraded}')
-        .video-submission-heading.panel-heading.clearfix(ng-if='ctrl.userPiece.submissionVideoURL')
+      .panel.panel-default.piece-panel.video-submission-panel
+        .video-submission-overlay.clearfix(ng-if='ctrl.userPiece.submissionVideoURL')
           .pull-left
-            a.submit-another-video click here to submit a another video
+            a Click to submit another video
           .pull-right
-            span.submission-status {{ctrl.getStatus(ctrl.userPiece)}}
-            i.fa.fa-upload(ng-if='ctrl.userPiece.waitingToBeGraded')
-            i.fa.fa-check(ng-if='ctrl.userPiece.grade && !ctrl.userPiece.waitingToBeGraded')
+            gq-piece-status(user-piece='ctrl.userPiece')
         .video-panel-body.select-video.text-center(ng-show='!ctrl.userPiece.submissionVideoURL && !ctrl.uploading' ngf-select ngf-change="ctrl.upload($file)")
           div
             i.fa.fa-upload.fa-5x
@@ -33,26 +31,18 @@
             )
         .submission-successful.text-center(ng-show='ctrl.userPiece.submissionVideoURL')
           video.video-preview(controls)
-          //- a(href='#') Submit a different video
-        //- .status(ng-class='{"bg-warning": ctrl.userPiece.waitingToBeGraded, "bg-success": ctrl.userPiece.grade && !ctrl.userPiece.waitingToBeGraded}')
-        //-   span bam
-        //-   i.fa.fa-upload(ng-if='ctrl.userPiece.waitingToBeGraded')
-        //-   i.fa.fa-check(ng-if='ctrl.userPiece.grade && !ctrl.userPiece.waitingToBeGraded')
 
       .panel.panel-default.piece-panel
-        .panel-heading
-          .panel-title Comments
+        .panel-heading.piece-heading
+          .panel-title Piece History
         .list-group
-          .list-group-item(ng-if='!ctrl.userPiece.history || ctrl.userPiece.history.length === 0') No comments yet.
+          .list-group-item(ng-if='!ctrl.userPiece.history || ctrl.userPiece.history.length === 0') No history yet.
           .list-group-item(
             ng-if='ctrl.userPiece.history.length > 0'
             ng-repeat='historyItem in ctrl.userPiece.history'
           )
             .history-item-details <strong>Danny Nelson</strong> <em>{{ctrl.getTimeFromNow(historyItem.createdAt)}}</em>
             div(ng-if='historyItem.text') {{historyItem.text}}
-
-        //- BELOW THIS POINT ONLY FOR INSTRUCTORS
-        //- .btn.btn-default.btn-block.control-btn(ng-click='ctrl.fakeUpload()') Submit Video
 
     .col-md-4
       .panel.panel-default
@@ -72,7 +62,7 @@
         .panel-body
           strong REQUEST A PRIVATE LESSON
           .row
-            .col-xs-3.text-info.text-right
+            .col-xs-3.text-info.text-center
               i.link-panel-icon.fa.fa-users.fa-3x
             .col-xs-9
               div Need help? Get a private video lesson from one of our teachers?
@@ -84,7 +74,7 @@
         .panel-body
           strong BUY THE SHEET MUSIC
           .row
-            .col-xs-3.text-info.text-right
+            .col-xs-3.text-info.text-center
               i.link-panel-icon.fa.fa-book.fa-3x
             .col-xs-9
               div Find every GuitarQuest level 1 piece in <em>Bridges (Preparatory Level)</em>
