--- a/app/review_submitted_piece/style.styl
+++ b/app/review_submitted_piece/style.styl
@@ -40,8 +40,9 @@
 
   .control-btn
     margin-bottom 10px
+
   .comment
-    margin-bottom 10px
+    width 100%
 
   .grade
     margin-right 5px
@@ -51,8 +52,6 @@
   .submit-grade-btn
     margin-top 10px
     margin-top 10px
-    width 250px
-    display inline-block
 
   .percent
     margin-top 10px
