--- a/app/piece/style.styl
+++ b/app/piece/style.styl
@@ -58,8 +58,12 @@
     position relative
 
     .video-submission-overlay
+      z-index 100
       position absolute
       top 0px
       width 100%
       background-color rgba(255, 255, 255, 0.7)
       padding 5px 15px
+
+  .inline-comment
+    display inline-block
