Refactor quests to randomly generate quests for any level below the current.

--- a/app/quests/style.styl
+++ b/app/quests/style.styl
@@ -5,15 +5,19 @@
     border 2px solid #FF9800
 
   .quest-title
-    font-size 18px
+    font-size 23px
+    margin-bottom: 30px;
+    margin-top: 20px;
 
   .reward
-    font-size 22px
+    font-size 28px
     margin-top -5px
     margin-bottom 10px
 
   .description
-    font-size 14px
+    font-size 20px
+    margin-top  30px
+    margin-bottom 30px
     line-height 20px
 
   .exp
