--- a/local_modules/directives/gq_piece_history/template.jade
+++ b/local_modules/directives/gq_piece_history/template.jade
@@ -15,7 +15,7 @@
             i.fa.fa-comment.fa-3x.text-info(ng-if='historyItem.comment')
           .col-xs-11
             .historyChanges-item-details <strong>{{ctrl.usersById[historyItem.updatedBy].email}}</strong> <em>{{ctrl.getTimeFromNow(historyItem.updatedAt)}}</em>
-            .history-item-commment(ng-if='historyItem.grade') Graded the piece <strong>{{historyItem.grade * 100}}%</strong>. You have earned a total of <strong>{{historyItem.grade * ctrl.level.getPointsPerPiece(ctrl.level)}}</strong> points for this piece.
+            .history-item-commment(ng-if='historyItem.grade') Graded the piece <strong>{{historyItem.grade * 100}}%</strong>. You have earned a total of <strong>{{historyItem.grade * ctrl.levelHelper.getPointsPerPiece(ctrl.level)}}</strong> points for this piece.
             .history-item-commment(ng-if='historyItem.comment') {{historyItem.comment}}
             .history-item-video(ng-if='historyItem.submissionVideoURL')
               a(ng-href='{{historyItem.submissionVideoURL}}') submitted video
