--- a/app/login/template.jade
+++ b/app/login/template.jade
@@ -3,9 +3,10 @@
     .login-panel.panel.panel-default
       .panel-body
         h4.text-center Login
-        form(ng-submit='loginCtrl.login()')
-          input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='loginCtrl.form.email')
-          input.form-control(type='password' placeholder='password' ng-model='loginCtrl.form.password')
+        alert(type='danger' ng-if='ctrl.error' close='ctrl.error = null') {{ctrl.error}}
+        form(ng-submit='ctrl.login()')
+          input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='ctrl.form.email')
+          input.form-control(type='password' placeholder='password' ng-model='ctrl.form.password')
           button.login-btn.btn.btn-primary.btn-block(type='submit') Login
           .text-center
             a(href='' ui-sref='guitarQuest.creatAccount') create new account
