Create script for generating quests

--- a/app/quests/style.styl
+++ b/app/quests/style.styl
@@ -6,8 +6,9 @@
 
   .quest-title
     font-size 20px
-    margin-bottom: 30px;
-    margin-top: 20px;
+    margin-bottom 30px
+    margin-top 20px
+    line-height 30px
 
   .reward
     font-size 25px
