Refactor quest logic into questHelpers

--- a/app/quests/template.jade
+++ b/app/quests/template.jade
@@ -8,5 +8,5 @@
         .panel-body.text-center
           h5.quest-title {{quest.name}}
           .reward
-            .label.label-warning {{quest.reward.credit}} credits
+            .label.label-warning {{quest.reward.credits}} credits
           .description {{quest.quantityCompleted}} / {{quest.quantityToComplete}} Complete
