--- a/app/quests/style.styl
+++ b/app/quests/style.styl
@@ -10,19 +10,29 @@
     margin-top 20px
     line-height 30px
 
+  .quest-panel-body
+    padding 20px
+
   .reward
-    font-size 25px
-    margin-top -5px
-    margin-bottom 10px
+    margin-top 25px
+    margin-bottom 13px
+
+    .reward-icon
+      font-size 80px
+
+    .credits
+      font-size 20px
+      font-weight bold
+      margin-top -8px
 
   .description
-    font-size 17px
-    margin-top  30px
-    margin-bottom 30px
-    line-height 20px
+    font-size 16px
+    line-height 21px
+    opacity 0.5
 
-  .exp
-    margin-left 5px
+  .quantity-complete
+    margin-top  12px
+    margin-bottom 12px
 
   .no-quests
     margin-top 100px
