Finish styling quests

--- a/app/piece/template.jade
+++ b/app/piece/template.jade
@@ -29,7 +29,7 @@
 
           .video-submission-overlay.select-video.clearfix(ng-if='ctrl.userPiece.submissionVideoURL' ngf-select="ctrl.upload($file)")
             .pull-left
-              span.text-info Click to submit another video
+              strong.text-info Click to submit another video
             .pull-right
               gq-piece-status(user-piece='ctrl.userPiece')
 
