--- a/app/quests/style.styl
+++ b/app/quests/style.styl
@@ -5,34 +5,33 @@
     border 2px solid #FF9800
 
   .quest-title
-    font-size 20px
-    margin-bottom 30px
-    margin-top 20px
-    line-height 30px
+    font-size 20px // same size as piece title on pieces page
 
   .quest-panel-body
     padding 20px
 
   .reward
-    margin-top 25px
-    margin-bottom 18px
+    margin-top 20px
+    margin-bottom 13px
 
     .reward-icon
-      font-size 80px
+      font-size 65px
 
     .credits
-      font-size 20px
+      font-size 16px
       font-weight bold
       margin-top -8px
 
   .description
-    font-size 16px
-    line-height 21px
-    opacity 0.5
+    line-height 18px
+    font-size 14px
+    margin-bottom 7px
+    opacity 0.6
 
   .quantity-complete
-    margin-top  12px
-    margin-bottom 12px
+    font-size 17px // same size as piece title on pieces page
+    font-weight 400
+    margin-bottom 10px
 
   .no-quests
     margin-top 100px
