Make sure user is logged in after creating account

--- a/app/create_account/style.styl
+++ b/app/create_account/style.styl
@@ -1,6 +1,10 @@
 .guitar-quest-create-account
+  .title
+    font-size 28px
+
   .create-account-btn
     margin-top 30px
+    margin-bottom 10px
 
   .create-account-panel
     margin-top 50px
