--- a/app/create_account/template.jade
+++ b/app/create_account/template.jade
@@ -2,8 +2,8 @@
   .col-xs-12.col-md-4.col-md-offset-4
     .create-account-panel.panel.panel-default
       .panel-body
-        h4.text-center Create Free Account
+        h4.text-center Sign up
         form(ng-submit='createAccountCtrl.register()')
           input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='createAccountCtrl.form.email')
           input.form-control(type='password' placeholder='password' ng-model='createAccountCtrl.form.password')
-          button.create-account-btn.btn.btn-primary.btn-block(type='submit') Create Account
+          button.create-account-btn.btn.btn-primary.btn-block(type='submit') Sign up
