--- a/app/piece/style.styl
+++ b/app/piece/style.styl
@@ -1,7 +1,7 @@
 .guitar-quest-piece
   .points-to-next-level
     position relative
-    top 17px
+    top 18px
   .actions
     margin-bottom 15px
   .get-music
@@ -53,6 +53,10 @@
 
   .submission-status
     margin-right 10px
+
+  .composer
+    font-size 15px
+    margin-left 11px
 
   .video-submission-panel
     position relative
