--- a/app/quests/style.styl
+++ b/app/quests/style.styl
@@ -8,11 +8,11 @@
     font-size 20px // same size as piece title on pieces page
 
   .quest-panel-body
-    padding 20px
+    padding 10px 20px
 
   .reward
     margin-top 20px
-    margin-bottom 13px
+    margin-bottom 17px
 
     .reward-icon
       font-size 65px
