--- a/app/login/template.jade
+++ b/app/login/template.jade
@@ -2,7 +2,7 @@
   .col-xs-12.col-md-4.col-md-offset-4
     .login-panel.panel.panel-default
       .panel-body
-        h4.text-center Log in
+        h4.text-center.title Log in
         alert(type='danger' ng-if='ctrl.error' close='ctrl.error = null') {{ctrl.error}}
         form(ng-submit='ctrl.login()')
           input.form-control(id='inputEmail' type='email' placeholder='email' ng-model='ctrl.form.email')
