A number of fixes
- Level names match the names of the bridges guitar books.
- Clarify wording for quests

--- a/app/quests/template.jade
+++ b/app/quests/template.jade
@@ -9,6 +9,6 @@
           h5.quest-title {{ctrl.questHelpers.getTitle(quest)}}
           .reward.text-warning
             i.reward-icon.fa.fa-money.fa-3x
-            .credits {{quest.reward.credits}} credits
+            .credits ${{quest.reward.credits}} lesson credits
           .description {{ctrl.questHelpers.getDescription(quest)}}
           .quantity-complete {{quest.quantityCompleted}} / {{quest.quantityToComplete}} Complete
