--- a/app/pieces/template.jade
+++ b/app/pieces/template.jade
@@ -13,7 +13,7 @@
           span Next&nbsp;
           span.fa.fa-angle-double-right
   .clearfix
-    h4.pull-left.user-level Level {{ctrl.selectedLevel}}
+    h4.pull-left.user-level {{ctrl.levelHelper.getLevelName(ctrl.selectedLevel)}}
     .points-to-next-level.pull-right <strong>{{ctrl.levelPoints.completed}} / {{ctrl.levelPoints.total}}</strong> points to next level
   .row
     .col-xs-12
