Clean up landing page

--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -1,25 +1,17 @@
 .guitar-quest-landing
-  .jumbotron
+  //- https://www.shopify.com/blog/16480796-how-to-create-beautiful-and-persuasive-hero-images-for-your-online-store
+  //- https://ghost.org/
+  //- https://www.guitartricks.com/
+  //- http://artistworks.com/
+  //- https://twitter.com/
+  //- https://www.facebook.com/
+  //- https://www.facebook.com/
+  //- https://www.coursera.org/
+  .jumbotron.guitar-background
     .container
-      h2 A game for learning classical guitar
-      .btn.btn-primary.btn-lg Create a Free Account
-
-  .container
-    .row
-      .col-md-4
-        .panel.panel-default
-          .panel-body
-            h5 Earn points to increase your level
-            p Submit videos of guitar pieces to earn points, and unlock more difficult pieces as you progress to higher levels.
-
-      .col-md-4
-        .panel.panel-default
-          .panel-body
-            h5 Collect rewards
-            p Complete "quests" to win credits for buying private video lessons.
-
-      .col-md-4
-        .panel.panel-default
-          .panel-body
-            h5 Learn from tutorials and lessons
-            p Watch tutorials or request private video lessons when you need help.
+      h2.title Learn Classical Guitar
+      h3.subtitle with an online, interactive game
+      .input-group.action-input
+        input.form-control.input-lg(placeholder='Enter your email')
+        .input-group-btn.action-btn
+          .action.btn.btn-primary.btn-lg Try it Free
