--- a/app/landing/style.styl
+++ b/app/landing/style.styl
@@ -1,5 +1,35 @@
 .guitar-quest-landing
-  .jumbotron
-    padding-top 30px
-    padding-bottom 30px
+  .guitar-background
     margin-top -23px
+    background-image url("/guitar.jpg")
+    background-position: center center
+    background-repeat: no-repeat
+    background-attachment: fixed
+    background-color white
+    -webkit-background-size cover
+    -moz-background-size cover
+    -o-background-size cover
+    background-size cover
+    height 600px
+
+  .title
+    font-weight 400
+    color #575757
+    character-spacing -1px
+    margin-top 50px
+    margin-bottom 0px
+
+  .subtitle
+    font-size 31px
+    color #8F8F8F
+    font-weight 400
+    margin-top 0px
+
+  .action-input
+    width 550px
+    margin-top 100px
+
+  .action-btn
+    position relative !important
+    top 2px !important
+    left 10px !important
