Finish styling landing page

--- a/app/landing/template.jade
+++ b/app/landing/template.jade
@@ -1,4 +1,5 @@
 .guitar-quest-landing
+  //- Tagline: http://www.copyblogger.com/create-a-tagline/
   //- https://www.shopify.com/blog/16480796-how-to-create-beautiful-and-persuasive-hero-images-for-your-online-store
   //- https://ghost.org/
   //- https://www.guitartricks.com/
@@ -9,9 +10,30 @@
   //- https://www.coursera.org/
   .jumbotron.guitar-background
     .container
-      h2.title Learn Classical Guitar
-      h3.subtitle with an online, interactive game
-      .input-group.action-input
-        input.form-control.input-lg(placeholder='Enter your email')
-        .input-group-btn.action-btn
-          .action.btn.btn-primary.btn-lg Try it Free
+      .row
+        .col-xs-9
+          h3.title Learn classical guitar by playing great pieces.
+          .action-btn.btn.btn-primary.btn-lg(ui-sref='guitarQuest.createAccount') Start Learning for Free
+
+  //- .container
+  //-   .row
+  //-     .col-md-3
+  //-       i.fa.fa-music.how-it-works-icon.text-info
+  //-     .col-md-9
+  //-       h3 Choose a Guitar Piece From Your Level
+  //-       p Every GuitarQuest player starts out at the Preparatory level, and levels up as they get more advanced
+  //-   .row
+  //-     .col-md-3
+  //-       i.fa.fa-music.how-it-works-icon.text-info
+  //-     .col-md-9
+  //-       h3 Choose a Guitar Piece
+  //-       p Choose from a selection of classical guitar pieces for your current level. Read tutorials or request a private lesson if you need help.
+  //-   .row
+  //-     .col-md-3
+  //-       i.fa.fa-upload.how-it-works-icon.text-warning
+  //-     .col-md-3
+  //-       h3 Submit a Video
+  //-       p Upload a video of you performing the piece.
+
+
+
