--- a/app/pricing/template.jade
+++ b/app/pricing/template.jade
@@ -8,17 +8,17 @@
         .features
           div
             i.fa.fa-check
-            span  Up to 4 video submissions
+            span  Cannot level up beyond preparatory
           div
             i.fa.fa-check
-            span  Access to all pieces
+            span  Unlimited video uploads
           div
             i.fa.fa-check
-            span  Access to all quests
+            span  Unlimited quests
           div
             i.fa.fa-check
-            span  Access to all tutorials
-        button.login-btn.btn.btn-primary.btn-block(href='' ui-sref='guitarQuest.creatAccount') Create Account
+            span  Access to Private Lessons
+        button.login-btn.btn.btn-primary.btn-block(href='' ui-sref='guitarQuest.creatAccount') Sign up
 
   .col-md-4
     .price-panel.panel.panel-default
@@ -28,14 +28,15 @@
         .features
           div
             i.fa.fa-check
-            span  Unlimited video submissions
+            span  Can level up to level 8
           div
             i.fa.fa-check
-            span  Access to all pieces
+            span  Unlimited video uploads
           div
             i.fa.fa-check
-            span  Access to all quests
+            span  Unlimited quests
           div
             i.fa.fa-check
-            span  Access to all tutorials
-        button.login-btn.btn.btn-primary.btn-block(href='' ui-sref='guitarQuest.creatAccount') Get Started
+            span  Access to Private Lessons
+        button.login-btn.btn.btn-primary.btn-block(href='' ui-sref='guitarQuest.creatAccount') Sign up
+
