--- a/app/landing/style.styl
+++ b/app/landing/style.styl
@@ -21,15 +21,11 @@
 
   .subtitle
     font-size 31px
-    color #8F8F8F
+    color #575757
     font-weight 400
     margin-top 0px
 
-  .action-input
-    width 550px
-    margin-top 100px
-
   .action-btn
-    position relative !important
-    top 2px !important
-    left 10px !important
+    margin-top 25px
+    width 250px
+    text-transform none
