--- a/local_modules/directives/gq_navbar/template.jade
+++ b/local_modules/directives/gq_navbar/template.jade
@@ -10,6 +10,13 @@
             span.icon-bar
           a.navbar-brand(ui-sref='guitarQuest.landing') GuitarQuest
         .collapse.navbar-collapse(ng-class="{'navbar-menu-show': ctrl.navbarVisible}")
+          //- ul.nav.navbar-nav(ng-if='!ctrl.isLoggedIn()')
+          //-   li(ng-class="{active: ctrl.stateIncludes('guitarQuest.howItWorks')}")
+          //-     a(ui-sref='guitarQuest.howItWorks') How it Works
+
+          //-   li(ng-class="{active: ctrl.stateIncludes('guitarQuest.pricing')}")
+          //-     a(ui-sref='guitarQuest.pricing') Pricing
+
           ul.nav.navbar-nav(
             ng-click='ctrl.navbarVisible = !ctrl.navbarVisible'
             ng-if='ctrl.isLoggedIn()'
@@ -19,17 +26,15 @@
                 span Pieces
                 span.badge.link-badge.badge-warning(ng-if='ctrl.notificationCount.piece') {{ctrl.notificationCount.piece}}
 
-            li.quests(ng-class="{active: ctrl.stateIncludes('guitarQuest.quests')}")
-              a(ui-sref='guitarQuest.quests')
-                span Quests
+            li.challenges(ng-class="{active: ctrl.stateIncludes('guitarQuest.challenges')}")
+              a(ui-sref='guitarQuest.challenges')
+                span Challenges
                 span.badge.link-badge.badge-warning(ng-if='ctrl.notificationCount.quest') {{ctrl.notificationCount.quest}}
 
             li(ng-class="{active: ctrl.stateIncludes('guitarQuest.submittedPieces')}")
               a(ui-sref='guitarQuest.submittedPieces') Submitted
 
           ul.nav.navbar-nav.navbar-right(ng-if='!ctrl.isLoggedIn()')
-            li(ng-class="{active: ctrl.stateIncludes('guitarQuest.pricing')}")
-              a(ui-sref='guitarQuest.pricing') Pricing
             li(ng-class="{active: ctrl.stateIncludes('guitarQuest.login')}")
               a(ui-sref='guitarQuest.login') Log in
             li(ng-class="{active: ctrl.stateIncludes('guitarQuest.createAccount')}")
